--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 										<textarea id="message" placeholder="Digite sua mensagem..."></textarea>
 									</div>
 									<div class="iknow_tm_button">
-										<a id="send_message" href="#">Enviar</a>
+										<a id="send_message" href="mailto:cebranco@yahoo.com">Enviar</a>
 									</div>
 
 									<!-- If you want change mail address to yours, just open "modal" folder >> contact.php and go to line 4 and change detail to yours.  -->
